# Project3

./: .gitignore  Cargo.toml  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  README.md  clippy.toml  docker-compose.yml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml
bindings-android/: build.gradle.kts
bindings-ios/: Package.swift
bindings-ios/Sources/E2EESDK/: E2EESDK.swift
core-rust/: Cargo.toml  README.md  USAGE.md  build.rs  flutter_rust_bridge_codegen.yaml
core-rust/examples/: basic_usage.rs  dr_demo.rs
core-rust/src/: error.rs  frb_generated.rs  lib.rs
core-rust/src/ffi/: api.rs  keys.rs  mod.rs  session.rs
core-rust/src/keys/: identity.rs  mod.rs  prekey.rs
core-rust/src/message/: envelope.rs  mod.rs
core-rust/src/ratchet/: chain.rs  double_ratchet.rs  mod.rs
core-rust/src/x3dh/: handshake.rs  initiator.rs  mod.rs  responder.rs
core-rust/tests/: integration_test.rs  test_chain_sync.rs  test_encrypt_decrypt.rs
demo-app/: ANDROID_BUILD.md  README.md  RUN_TWO_INSTANCES.md  flutter_rust_bridge.yaml  pubspec.yaml  run_two_instances.sh  rust_bridge_config.yaml
demo-app/android/app/: build.gradle.kts
demo-app/docs/: AUTH_FLOW_SUMMARY.md  BACKEND_INTEGRATION.md  EVALUATION_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STEPS.md  LOG_EVALUATION.md  NAKAMA_INTEGRATION.md  README_AUTH.md  SIGNAL_STYLE_ARCHITECTURE.md  UPDATED_AUTH_FLOW.md
demo-app/integration_test/: simple_test.dart
demo-app/lib/: main.dart
demo-app/lib/bridge_generated/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
demo-app/lib/models/: chat_message.dart  identity.dart  message.dart  session.dart
demo-app/lib/services/: api_service.dart  auth_service.dart  chat_service.dart  chat_session_manager.dart  device_manager.dart  device_service.dart  friend_service.dart  key_service_client.dart  mock_backend_service.dart  nakama_service.dart  session_manager.dart  token_storage.dart
demo-app/lib/viewmodels/: chat_view_model.dart  chat_with_backend_view_model.dart  e2ee_view_model.dart  friend_view_model.dart  nakama_chat_view_model.dart
demo-app/lib/views/: chat_page.dart  e2ee_home_page.dart  friend_list_page.dart  login_page.dart  login_page_example.dart
demo-app/linux/: CMakeLists.txt
demo-app/rust_builder/: pubspec.yaml
demo-app/rust_builder/android/: build.gradle  settings.gradle
docs/: CI_PIPELINE.md  CODEBASE_REVIEW.md  COMPREHENSIVE_CODE_REVIEW.md  MVP_TEST_FLOW.md  PHASE0_REVIEW.md  PLATFORM_REQUIREMENTS.md  TECH_DECISIONS.md  THREAT_MODEL.md
gateway-node/: package-lock.json  package.json
gateway-node/src/: server.ts
key-exchange-service/: API.md
key-service/: .dockerignore  Dockerfile  KEY_GENERATION_FLOW.md  NAKAMA_INTEGRATION.md  README.md  go.mod  go.sum  main.go  test_api.go  test_api.sh  test_friend_api.go  test_full_flow.sh  test_simple.sh
(+35 files in other folders)
