[workspace]
members = [
    "core-rust",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["E2EE Platform Team"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Crypto libraries
ring = "0.17"
x25519-dalek = "2.0"
ed25519-dalek = "2.0"
prost = "0.12"
prost-types = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"

