[package]
name = "e2ee-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[dependencies]
# Crypto libraries
ring = { workspace = true }
x25519-dalek = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }

# Serialization
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
anyhow = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }

# FFI for Flutter
flutter_rust_bridge = "=2.11.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
once_cell = "1.19"

[build-dependencies]
flutter_rust_bridge_codegen = "2.0"

[dev-dependencies]
# Dev dependencies nếu cần cho tests

